--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE <html>
 <head>
-
+   <meta charset="utf8">
+   <link rel="stylesheet" type="text/css" href="//chocodeerzynx.github.io/XLibreWeb/style/style.css">
 </head>
 <body>
    <div id="header">
