--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
             <img src="x11.svg" alt="logo" width="25" height="25"/>
          </a>
 
-         <a href="//chocodeerzynx.github.io/XLibreWeb">
-            <h1>XLibre Xserver</h1>
-         </a>
+         <a id="headerlink" href="//chocodeerzynx.github.io/XLibreWeb">XLibre Xserver</a>
 
       </div>
       <div id="menu">
@@ -23,6 +21,7 @@
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
       </div>
+      <div class="box">
       <p>Xlibre is a fork of the <a href="https://gitlab.freedesktop.org/xorg/xserver">Xorg Xserver</a>
          with lots of code cleanups and enhanced functionality.</p>
       <p>This fork was necessary since toxic elements within Xorg projects, moles
@@ -43,6 +42,7 @@
          small furry creature from Alpha Centauri, or just a boring average person.
          Anybody who's interested in bringing X forward is welcome.</p>
       <p>Together we'll make X great again!</p>
+      </div>
       
       <h2>Upgrade notice</h2>
       <ul>
@@ -73,6 +73,12 @@
             See <a href="https://github.com/X11Libre/xserver/blob/master/.gitlab-ci.yml">.gitlab-ci.yml</a> for the versions/branches built along with Xlibre.</p>
          </li>
       </ul>
+
+      <div>
+         <ul>
+            
+         </ul>
+      </div>
    </body>
    <footer>
       <h2>Contact</h2>
