Fix footer contacts table

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       </div>
       <div id="menu">
-         <a href="//X11Libre/xserver/">Home</a>
+         <a href="//chocodeerzynx.github.io/XLibreWeb">Home</a>
          <span class="right">
             <a href="downloads.html">Download</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
@@ -80,7 +80,7 @@
          </ul>
       </div>
    </body>
-   <footer>
+   <div id="footer">
       <h2>Contact</h2>
       <table>
          <tr><th></th><th></th></tr>
