--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
          <a href="//chocodeerzynx.github.io/XLibreWeb">
             <img src="x11.svg" alt="logo" width="25" height="25"/>
          </a>
-
          <a id="headerlink" href="//chocodeerzynx.github.io/XLibreWeb">XLibre Xserver</a>
-
       </div>
       <div id="menu">
          <a href="//chocodeerzynx.github.io/XLibreWeb">Home</a>
@@ -21,7 +19,7 @@
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
       </div>
-      <div class="box">
+      <div id="intro" class="box">
       <p>Xlibre is a fork of the <a href="https://gitlab.freedesktop.org/xorg/xserver">Xorg Xserver</a>
          with lots of code cleanups and enhanced functionality.</p>
       <p>This fork was necessary since toxic elements within Xorg projects, moles
@@ -80,13 +78,13 @@
          </ul>
       </div>
    </body>
-   <div id="footer">
+   <div id="content-right">
+      <div id="nav-sidebar" class="widget">
       <h2>Contact</h2>
-      <table>
-         <tr><th></th><th></th></tr>
-         <tr><td>Mailing list:                     </td><td><a href="https://www.freelists.org/list/xlibre">https://www.freelists.org/list/xlibre</a> </td></tr>
-         <tr><td>Telegram channel:                 </td><td><a href="https://t.me/x11dev">https://t.me/x11dev</a> </td></tr>
-         <tr><td>Matrix room (mirror of tg group): </td><td><a href="https://matrix.to/#/%23xlibre:matrix.org">https://matrix.to/#/#xlibre:matrix.org</a> </td></tr>
-      </table>
-   </footer>
+      <ul>
+         <li><a href="https://www.freelists.org/list/xlibre">Mailing list</a></li>
+         <li><a href="https://t.me/x11dev">Telegram channel</a></li>
+         <li><a href="https://matrix.to/#/%23xlibre:matrix.org">Matrix room (mirror of tg group)</a></li>
+      </ul>
+   </div>
 </html>
