--- a/downloads.html
+++ b/downloads.html
@@ -15,7 +15,7 @@
 
       </div>
       <div id="menu">
-         <a href="//X11Libre/xserver/">Home</a>
+         <a href="//chocodeerzynx.github.io/XLibreWeb">Home</a>
          <span class="right">
             <a href="downloads.html">Download</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
