--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
          <a id="headerLink" href="//chocodeerzynx.github.io/XLibreWeb">XLibre Xserver</a>
       </div>
       <div id="menu">
-         <a href="//chocodeerzynx.github.io/XLibreWeb">Home</a>
+         <a href="index.html">Home</a>
          <span class="right">
-            <a href="downloads.html">Download</a>
+            <a href="drivers.html">Download</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
       </div>
@@ -74,17 +74,17 @@
                   See <a href="https://github.com/X11Libre/xserver/blob/master/.gitlab-ci.yml">.gitlab-ci.yml</a> for the versions/branches built along with Xlibre.</p>
                </li>
             </ul>
-
+         </div>
+      </div>
+      <div id="content-right">
+         <div id="nav-sidebar" class="nav-border">
+            <h3>Contact</h3>
+            <ul>
+               <li><a href="https://www.freelists.org/list/xlibre">Mailing list</a></li>
+               <li><a href="https://t.me/x11dev">Telegram channel</a></li>
+               <li><a href="https://matrix.to/#/%23xlibre:matrix.org">Matrix room (mirror of tg group)</a></li>
+            </ul>
          </div>
       </div>
    </body>
-   <div id="content-right">
-      <div id="nav-sidebar" class="widget">
-         <h2>Contact</h2>
-         <ul>
-            <li><a href="https://www.freelists.org/list/xlibre">Mailing list</a></li>
-            <li><a href="https://t.me/x11dev">Telegram channel</a></li>
-            <li><a href="https://matrix.to/#/%23xlibre:matrix.org">Matrix room (mirror of tg group)</a></li>
-         </ul>
-      </div>
 </html>
