New placeholder logo and added responsive design

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset="utf8">
+      <meta charset="utf8" name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="style/style.css">
    </head>
 
    <body>
       <div id="header">
          <a href="//chocodeerzynx.github.io/XLibreWeb">
-            <img src="x11.svg" alt="logo" width="25" height="25"/>
+            <img src="xlibre-long.png" alt="logo"/>
          </a>
-         <a id="headerLink" href="//chocodeerzynx.github.io/XLibreWeb">XLibre Xserver</a>
+         <a id="headerLink" href="//chocodeerzynx.github.io/XLibreWeb">X11Libre</a>
       </div>
       <div id="menu">
          <a href="index.html">Home</a>
@@ -43,6 +43,7 @@
          <p>Together we'll make X great again!</p>
       </div>
 
+      <div id="main-content">
       <div id="content-left-wrapper">
          <div id="content-left">
             <h2>Upgrade notice</h2>
@@ -85,6 +86,7 @@
                <li><a href="https://matrix.to/#/%23xlibre:matrix.org">Matrix room (mirror of tg group)</a></li>
             </ul>
          </div>
+      </div>
       </div>
    </body>
 </html>
