--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body>
       <div id="header">
          <a href="//chocodeerzynx.github.io/XLibreWeb">
-            <img src="xlibre-long.png" alt="logo"/>
+            <img src="xlibre-long-trans.png" alt="logo"/>
          </a>
          <a id="headerLink" href="//chocodeerzynx.github.io/XLibreWeb">X11Libre</a>
       </div>
