New code block css

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
    <body>
       <div id="header">
-         <a href="//chocodeerzynx.github.io/XLibreWeb">
-            <img src="xlibre-long-trans.png" alt="logo"/>
+         <a href="//chocodeerzynx.github.io/XLibreSite">
+            <img src="xlibre-long-trans.png" alt="placeholder-logo"/>
          </a>
-         <a id="headerLink" href="//chocodeerzynx.github.io/XLibreWeb">X11Libre</a>
+         <a id="headerLink" href="//chocodeerzynx.github.io/XLibreSite">X11Libre</a>
       </div>
       <div id="menu">
          <a href="index.html">Home</a>
          <span class="right">
+            <a href="wiki.html">Wiki</a>
             <a href="drivers.html">Download</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
@@ -85,6 +86,10 @@
                <li><a href="https://t.me/x11dev">Telegram channel</a></li>
                <li><a href="https://matrix.to/#/%23xlibre:matrix.org">Matrix room (mirror of tg group)</a></li>
             </ul>
+               <h3>Contribute</h3>
+               <ul>
+               <li><a href="https://github.com/X11Libre/xserver">Github</a></li>
+               </ul>
          </div>
       </div>
       </div>
