--- a/drivers.html
+++ b/drivers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset="utf8">
+      <meta charset="utf8" name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" type="text/css" href="style/style.css">
    </head>
 
@@ -15,7 +15,8 @@
       <div id="menu">
          <a href="index.html">Home</a>
          <span class="right">
-            <a href="downloads.html">Download</a>
+            <a href="wiki.html">Wiki</a>
+            <a href="drivers.html">Download</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
       </div>
@@ -23,7 +24,7 @@
          <h2>Driver repositories</h2>
          <p>Since Redhat had deleted and banned all X11Libre repositories from freedesktop.org,
             the driver repositories are now moved to GitHub:</p>
-         <table>
+         <table id="driver">
             <tr><th>Driver </th><th>Git repository </th><th>Release tag </th></tr>
             <tr><td>xf86-input-elographics:   </td><td><a href="https://github.com/X11Libre/xf86-input-elographics">https://github.com/X11Libre/xf86-input-elographics</a>    </td><td>xlibre-xf86-input-elographics-1.4.4.1    </td></tr>
             <tr><td>xf86-input-evdev:         </td><td><a href="https://github.com/X11Libre/xf86-input-evdev">https://github.com/X11Libre/xf86-input-evdev</a>          </td><td>xlibre-xf86-input-evdev-2.11.0.1         </td></tr>
