New installation page

--- a/drivers.html
+++ b/drivers.html
@@ -15,8 +15,8 @@
       <div id="menu">
          <a href="index.html">Home</a>
          <span class="right">
-            <a href="wiki.html">Wiki</a>
-            <a href="drivers.html">Download</a>
+            <a href="wiki.html">Installation</a>
+            <a href="drivers.html">Drivers</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
       </div>
