--- a/wiki.html
+++ b/wiki.html
@@ -15,10 +15,29 @@
       <div id="menu">
          <a href="index.html">Home</a>
          <span class="right">
-            <a href="wiki.html">Wiki</a>
-            <a href="drivers.html">Download</a>
+            <a href="wiki.html">Installation</a>
+            <a href="drivers.html">Drivers</a>
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
+      </div>
+      <div id="main-content">
+         <h2>Installation on Major Distros</h2>
+         <ul>
+            <li>Arch Linux (AUR)
+               <a href="https://aur.archlinux.org/packages/xlibre-server-git#comment-1028466">Note: See this comment</a>
+<pre>
+<code>yay -S xlibre-server-bootstrap-git
+yay -S xlibre-input-libinput
+yay -S xlibre-server-git
+</code>
+</pre>
+            </li>
+            <li>Artix Linux</li>
+            <li>Gentoo Linux
+               <a href="https://github.com/X11Libre/ports-gentoo">See Repo for packaging on Gentoo</a>
+            </li>
+
+         </ul>
       </div>
    </body>
 </html>
