Improved navigation and new readme

--- a/wiki.html
+++ b/wiki.html
@@ -20,24 +20,28 @@
             <a href="//github.com/X11Libre/xserver">Source</a>
          </span>
       </div>
+      <div class="quicklink">
+         <a href="#Arch">Arch Linux</a>
+      </div>
       <div id="main-content">
-         <h2>Installation on Major Distros</h2>
-         <ul>
-            <li>Arch Linux (AUR)
-               <a href="https://aur.archlinux.org/packages/xlibre-server-git#comment-1028466">Note: See this comment</a>
+         <div class="install">
+            <h2>Installation on Major Distros</h2>
+            <ul>
+               <li id="Arch">Arch Linux (AUR)
+                  <a href="https://aur.archlinux.org/packages/xlibre-server-git#comment-1028466">Note: See this comment</a>
 <pre>
 <code>yay -S xlibre-server-bootstrap-git
 yay -S xlibre-input-libinput
 yay -S xlibre-server-git
 </code>
 </pre>
-            </li>
-            <li>Artix Linux</li>
-            <li>Gentoo Linux
-               <a href="https://github.com/X11Libre/ports-gentoo">See Repo for packaging on Gentoo</a>
-            </li>
-
-         </ul>
+               </li>
+               <li>Artix Linux</li>
+               <li>Gentoo Linux
+                  <a href="https://github.com/X11Libre/ports-gentoo">See Repo for packaging on Gentoo</a>
+               </li>
+            </ul>
+         </div>
       </div>
    </body>
 </html>
